test/data/syntax-errors/missing-loop.derp
dile foos || tru dur
  pront 0;
urp
